--- a/index.Rmd
+++ b/index.Rmd
@@ -74,7 +74,43 @@ Los métodos que ofrecen estos paquetes son mucho más robustos que el histogram
 
 - Utilizando el comando `hist` y los paquetes `ASH` y `KernSmooth` verifique el tiempo requerido para estimar la densidad de una serie de datos Gaussianos con $\mu=1$ y varianza $\sigma^2=1$ y longitudes $N=2^i, \, i=8,9,10, 11, \ldots 16.$ (es necesario incluir un gráfico en `highcharter`)
 
+*R=*
 
+Para calcular el tiempo de ejecución, se usa la función `sys.time` en cada ejecución de las 3 funciones con los distintos valores de $i$.
+
+```{r gaussian_time, message=FALSE, include=FALSE}
+res_hist <- c()
+res_ash1 <- c()
+res_bkde <- c()
+
+# Obtener el tiempo de ejecucion usando cada funcion con un valor de i
+for (i in 8:16) {
+  set.seed(1234)
+  N <- 2^i
+  datos <- rnorm(N, mean = 1, sd = 1)
+  res_hist <- append(res_hist, system.time(hist(datos))["elapsed"])
+  res_ash1 <- append(res_ash1, system.time(ash1(bin1(datos)))["elapsed"])
+  res_bkde <- append(res_bkde, system.time(bkde(datos))["elapsed"])
+}
+```
+
+Los tiempos de ejecución se grafican con el paquete `highcharter`.
+
+```{r gaussian_time, message) FALSE}
+pacman::p_load(highcharter)
+
+# Graficar los resultados usango highcharter
+x <- 8:16
+highchart() %>%
+  hc_add_series(cbind(x, res_hist), name = "Función hist") %>% 
+  hc_add_series(cbind(x, res_ash1), name = "Función ash1") %>%
+  hc_add_series(cbind(x, res_bkde), name = "Función bkde") %>%
+  hc_add_theme(hc_theme_smpl()) %>%
+  hc_title(text = "Tiempo de ejecución") %>%
+  hc_subtitle(text = "IT0322 - Teoría de la información") %>%
+  hc_xAxis(title = list(text = "i")) %>%
+  hc_yAxis(title = list(text = "Tiempo"))
+```
 
 # La entropía utilizando el histograma
 
@@ -103,14 +139,48 @@ plot(index, entropies, type = "l", main="Entropías empíricas para datos normal
 ## Preguntas
 
 1. ¿Porqué existen valores discontinuos en la entropía?
+
+*R=*
+
+Porque existen puntos cuyos valores de pmf son 0, por lo que al calcular el logaritmo de la entropía sobre estos valores provoca que el valor resultante esté indefinido (en R esto sería obtener un `NaN`), provocando que estos valores se vean como discontinuidades en la gráfica.
+
 2. ¿Con qué código soluciona el problema de las discontinuidades?
-3. Ahora calcule la entropía de una serie de datos normales, denotados por $X_t$ (con $\mu=0$ y $\sigma=2$) pero ahora añadanle (súmenle) una segunda función $r_t$, es decir, hallen la entropía de la serie $Y_t = X_t+r_t$ con $r_t$ definida por:
+
+*R=*
+
+Si al momento de calcular la suma de la entropía usando la función `sum` excluyéramos estos valores con el parámetro `na.rm = TRUE`.
+
+3. Ahora calcule la entropía de una serie de datos normales, denotados por $X_t$ (con $\mu=0$ y $\sigma=2$) pero ahora añádanle (súmenle) una segunda función $r_t$, es decir, hallen la entropía de la serie $Y_t = X_t+r_t$ con $r_t$ definida por:
 $$ 
 r_t = \begin{cases}
 \sigma/4 & t\ge 16384\\
 0 & \mbox{otro caso}
 \end{cases}
 $$
+```{r rt_entropy_3}
+# Funcion r_t
+r_t <- function(t, sigma) ifelse(t >= 16384, sigma / 4, 0)
+
+set.seed(1234)
+datos        <- rnorm(32768, mean = 0, sd = 2) + r_t(1:32768, 2)
+wLength      <- 512
+plot(datos, type = "l", main="Serie de datos normal", ylab="Valores", xlab="Tiempo, t")
+noVentanas    <- length(datos)/wLength
+entropies     <- numeric(noVentanas)
+index         <- numeric(noVentanas)
+for(i in 1:noVentanas)
+{
+  
+  dataW        <- datos[wLength*(i-1)+1:wLength*i]
+  histo        <- hist(dataW, breaks=8,plot=FALSE)
+  pmf          <- histo$counts/sum(histo$counts)
+  entropies[i] <- -1*sum(pmf*log(pmf))
+  index[i]     <- wLength*(i-1)+1
+}
+plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", xlab="Tiempo, t", ylab="Valores de entropía")
+```
+
+
 4. Repitan el paso $3$ para $r_t$ dada por:
 $$ 
 r_t = \begin{cases}
@@ -118,6 +188,30 @@ r_t = \begin{cases}
 0 & \mbox{otro caso}
 \end{cases}
 $$
+
+```{r rt_entropy_4}
+# Funcion r_t
+r_t <- function(t, sigma) ifelse(t >= 16384, sigma / 2, 0)
+
+set.seed(1234)
+datos        <- rnorm(32768, mean = 0, sd = 2) + r_t(1:32768, 2)
+wLength      <- 512
+plot(datos, type = "l", main="Serie de datos normal", ylab="Valores", xlab="Tiempo, t")
+noVentanas    <- length(datos)/wLength
+entropies     <- numeric(noVentanas)
+index         <- numeric(noVentanas)
+for(i in 1:noVentanas)
+{
+  
+  dataW        <- datos[wLength*(i-1)+1:wLength*i]
+  histo        <- hist(dataW, breaks=8,plot=FALSE)
+  pmf          <- histo$counts/sum(histo$counts)
+  entropies[i] <- -1*sum(pmf*log(pmf))
+  index[i]     <- wLength*(i-1)+1
+}
+plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", xlab="Tiempo, t", ylab="Valores de entropía")
+```
+
 5. Repitan el paso $3$ para $r_t$ dada por:
 $$ 
 r_t = \begin{cases}
@@ -125,16 +219,286 @@ r_t = \begin{cases}
 0 & \mbox{otro caso}
 \end{cases}
 $$
+```{r rt_entropy_5}
+# Funcion r_t
+r_t <- function(t, sigma) ifelse(t >= 16384, sigma, 0)
+
+set.seed(1234)
+datos        <- rnorm(32768, mean = 0, sd = 2) + r_t(1:32768, 2)
+wLength      <- 512
+plot(datos, type = "l", main="Serie de datos normal", ylab="Valores", xlab="Tiempo, t")
+noVentanas    <- length(datos)/wLength
+entropies     <- numeric(noVentanas)
+index         <- numeric(noVentanas)
+for(i in 1:noVentanas)
+{
+  
+  dataW        <- datos[wLength*(i-1)+1:wLength*i]
+  histo        <- hist(dataW, breaks=8,plot=FALSE)
+  pmf          <- histo$counts/sum(histo$counts)
+  entropies[i] <- -1*sum(pmf*log(pmf))
+  index[i]     <- wLength*(i-1)+1
+}
+plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", xlab="Tiempo, t", ylab="Valores de entropía")
+```
+
 6. ¿Tiene algún efecto la longitud del salto en $r_t$ en la forma de la entropía? Explique.
+
+*R=*
+
+
+
 7. ¿Qué sucede ahora si $r_t$ es de la forma:
 $$ 
 r_t = \begin{cases}
 \sigma & 15872 \le t\le 16896\\
 0 & \mbox{otro caso}
 \end{cases}
-$$?
+$$
+?
+
+```{r rt_entropy_6}
+# Funcion r_t
+r_t <- function(t, sigma) ifelse(15872 <= t & t<= 16896, sigma, 0)
+
+set.seed(1234)
+datos        <- rnorm(32768, mean = 0, sd = 2) + r_t(1:32768, 2)
+wLength      <- 512
+plot(datos, type = "l", main="Serie de datos normal", ylab="Valores", xlab="Tiempo, t")
+noVentanas    <- length(datos)/wLength
+entropies     <- numeric(noVentanas)
+index         <- numeric(noVentanas)
+for(i in 1:noVentanas)
+{
+  
+  dataW        <- datos[wLength*(i-1)+1:wLength*i]
+  histo        <- hist(dataW, breaks=8,plot=FALSE)
+  pmf          <- histo$counts/sum(histo$counts)
+  entropies[i] <- -1*sum(pmf*log(pmf))
+  index[i]     <- wLength*(i-1)+1
+}
+plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", xlab="Tiempo, t", ylab="Valores de entropía")
+```
+
 8. Repita los pasos 3-7 pero ahora usando la entropía de Harvda con parámetro $\alpha=3$ y $\alpha=9$. ¿Qué efecto tiene $\alpha$?
 
+Repitiendo el paso 3, con ambos valores de alpha para la entropía de Havrda se obtiene lo siguiente:
+
+Usando $\alpha = 3$:
+
+```{r havrda_3_3}
+# Funcion r_t
+r_t <- function(t, sigma) ifelse(t >= 16384, sigma / 4, 0)
+
+set.seed(1234)
+datos        <- rnorm(32768, mean = 0, sd = 2) + r_t(1:32768, 2)
+wLength      <- 512
+plot(datos, type = "l", main="Serie de datos normal", ylab="Valores", xlab="Tiempo, t")
+noVentanas    <- length(datos)/wLength
+entropies     <- numeric(noVentanas)
+index         <- numeric(noVentanas)
+for(i in 1:noVentanas)
+{
+  
+  dataW        <- datos[wLength*(i-1)+1:wLength*i]
+  histo        <- hist(dataW, breaks=8,plot=FALSE)
+  pmf          <- histo$counts/sum(histo$counts)
+  # Entropia de Havrda con alpha = 3
+  entropies[i] <- -1*((1 / (1 - 3)) * log(sum(pmf^3) / sum(pmf)))
+  index[i]     <- wLength*(i-1)+1
+}
+plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", xlab="Tiempo, t", ylab="Valores de entropía")
+```
+
+Usando $\alpha = 9$:
+
+```{r havrda_3_9}
+# Funcion r_t
+r_t <- function(t, sigma) ifelse(t >= 16384, sigma / 4, 0)
+
+set.seed(1234)
+datos        <- rnorm(32768, mean = 0, sd = 2) + r_t(1:32768, 2)
+wLength      <- 512
+plot(datos, type = "l", main="Serie de datos normal", ylab="Valores", xlab="Tiempo, t")
+noVentanas    <- length(datos)/wLength
+entropies     <- numeric(noVentanas)
+index         <- numeric(noVentanas)
+for(i in 1:noVentanas)
+{
+  
+  dataW        <- datos[wLength*(i-1)+1:wLength*i]
+  histo        <- hist(dataW, breaks=8,plot=FALSE)
+  pmf          <- histo$counts/sum(histo$counts)
+  # Entropia de Havrda con alpha = 3
+  entropies[i] <- -1*((1 / (1 - 9)) * log(sum(pmf^9) / sum(pmf)))
+  index[i]     <- wLength*(i-1)+1
+}
+plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", xlab="Tiempo, t", ylab="Valores de entropía")
+```
+
+Repitiendo el paso 4, con ambos valores de alpha para la entropía de Havrda se obtiene lo siguiente:
+
+Usando $\alpha = 3$:
+
+```{r havrda_4_3}
+# Funcion r_t
+r_t <- function(t, sigma) ifelse(t >= 16384, sigma / 2, 0)
+
+set.seed(1234)
+datos        <- rnorm(32768, mean = 0, sd = 2) + r_t(1:32768, 2)
+wLength      <- 512
+plot(datos, type = "l", main="Serie de datos normal", ylab="Valores", xlab="Tiempo, t")
+noVentanas    <- length(datos)/wLength
+entropies     <- numeric(noVentanas)
+index         <- numeric(noVentanas)
+for(i in 1:noVentanas)
+{
+  
+  dataW        <- datos[wLength*(i-1)+1:wLength*i]
+  histo        <- hist(dataW, breaks=8,plot=FALSE)
+  pmf          <- histo$counts/sum(histo$counts)
+  # Entropia de Havrda con alpha = 3
+  entropies[i] <- -1*((1 / (1 - 3)) * log(sum(pmf^3) / sum(pmf)))
+  index[i]     <- wLength*(i-1)+1
+}
+plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", xlab="Tiempo, t", ylab="Valores de entropía")
+```
+
+Usando $\alpha = 9$:
+
+```{r havrda_4_9}
+# Funcion r_t
+r_t <- function(t, sigma) ifelse(t >= 16384, sigma / 2, 0)
+
+set.seed(1234)
+datos        <- rnorm(32768, mean = 0, sd = 2) + r_t(1:32768, 2)
+wLength      <- 512
+plot(datos, type = "l", main="Serie de datos normal", ylab="Valores", xlab="Tiempo, t")
+noVentanas    <- length(datos)/wLength
+entropies     <- numeric(noVentanas)
+index         <- numeric(noVentanas)
+for(i in 1:noVentanas)
+{
+  
+  dataW        <- datos[wLength*(i-1)+1:wLength*i]
+  histo        <- hist(dataW, breaks=8,plot=FALSE)
+  pmf          <- histo$counts/sum(histo$counts)
+  # Entropia de Havrda con alpha = 3
+  entropies[i] <- -1*((1 / (1 - 9)) * log(sum(pmf^9) / sum(pmf)))
+  index[i]     <- wLength*(i-1)+1
+}
+plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", xlab="Tiempo, t", ylab="Valores de entropía")
+```
+
+Repitiendo el paso 5, con ambos valores de alpha para la entropía de Havrda se obtiene lo siguiente:
+
+Usando $\alpha = 3$:
+
+```{r havrda_5_3}
+# Funcion r_t
+r_t <- function(t, sigma) ifelse(t >= 16384, sigma, 0)
+
+set.seed(1234)
+datos        <- rnorm(32768, mean = 0, sd = 2) + r_t(1:32768, 2)
+wLength      <- 512
+plot(datos, type = "l", main="Serie de datos normal", ylab="Valores", xlab="Tiempo, t")
+noVentanas    <- length(datos)/wLength
+entropies     <- numeric(noVentanas)
+index         <- numeric(noVentanas)
+for(i in 1:noVentanas)
+{
+  
+  dataW        <- datos[wLength*(i-1)+1:wLength*i]
+  histo        <- hist(dataW, breaks=8,plot=FALSE)
+  pmf          <- histo$counts/sum(histo$counts)
+  # Entropia de Havrda con alpha = 3
+  entropies[i] <- -1*((1 / (1 - 3)) * log(sum(pmf^3) / sum(pmf)))
+  index[i]     <- wLength*(i-1)+1
+}
+plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", xlab="Tiempo, t", ylab="Valores de entropía")
+```
+
+Usando $\alpha = 9$:
+
+```{r havrda_5_9}
+# Funcion r_t
+r_t <- function(t, sigma) ifelse(t >= 16384, sigma, 0)
+
+set.seed(1234)
+datos        <- rnorm(32768, mean = 0, sd = 2) + r_t(1:32768, 2)
+wLength      <- 512
+plot(datos, type = "l", main="Serie de datos normal", ylab="Valores", xlab="Tiempo, t")
+noVentanas    <- length(datos)/wLength
+entropies     <- numeric(noVentanas)
+index         <- numeric(noVentanas)
+for(i in 1:noVentanas)
+{
+  
+  dataW        <- datos[wLength*(i-1)+1:wLength*i]
+  histo        <- hist(dataW, breaks=8,plot=FALSE)
+  pmf          <- histo$counts/sum(histo$counts)
+  # Entropia de Havrda con alpha = 3
+  entropies[i] <- -1*((1 / (1 - 9)) * log(sum(pmf^9) / sum(pmf)))
+  index[i]     <- wLength*(i-1)+1
+}
+plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", xlab="Tiempo, t", ylab="Valores de entropía")
+```
+
+*PASO 6*
+
+Repitiendo el paso 7, con ambos valores de alpha para la entropía de Havrda se obtiene lo siguiente:
+
+Usando $\alpha = 3$:
+
+```{r havrda_7_3}
+# Funcion r_t
+r_t <- function(t, sigma) ifelse(15872 <= t & t<= 16896, sigma, 0)
+
+set.seed(1234)
+datos        <- rnorm(32768, mean = 0, sd = 2) + r_t(1:32768, 2)
+wLength      <- 512
+plot(datos, type = "l", main="Serie de datos normal", ylab="Valores", xlab="Tiempo, t")
+noVentanas    <- length(datos)/wLength
+entropies     <- numeric(noVentanas)
+index         <- numeric(noVentanas)
+for(i in 1:noVentanas)
+{
+  
+  dataW        <- datos[wLength*(i-1)+1:wLength*i]
+  histo        <- hist(dataW, breaks=8,plot=FALSE)
+  pmf          <- histo$counts/sum(histo$counts)
+  # Entropia de Havrda con alpha = 3
+  entropies[i] <- -1*((1 / (1 - 3)) * log(sum(pmf^3) / sum(pmf)))
+  index[i]     <- wLength*(i-1)+1
+}
+plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", xlab="Tiempo, t", ylab="Valores de entropía")
+```
+
+Usando $\alpha = 9$:
+
+```{r havrda_7_9}
+# Funcion r_t
+r_t <- function(t, sigma) ifelse(15872 <= t & t<= 16896, sigma, 0)
+
+set.seed(1234)
+datos        <- rnorm(32768, mean = 0, sd = 2) + r_t(1:32768, 2)
+wLength      <- 512
+plot(datos, type = "l", main="Serie de datos normal", ylab="Valores", xlab="Tiempo, t")
+noVentanas    <- length(datos)/wLength
+entropies     <- numeric(noVentanas)
+index         <- numeric(noVentanas)
+for(i in 1:noVentanas)
+{
+  
+  dataW        <- datos[wLength*(i-1)+1:wLength*i]
+  histo        <- hist(dataW, breaks=8,plot=FALSE)
+  pmf          <- histo$counts/sum(histo$counts)
+  # Entropia de Havrda con alpha = 3
+  entropies[i] <- -1*((1 / (1 - 9)) * log(sum(pmf^9) / sum(pmf)))
+  index[i]     <- wLength*(i-1)+1
+}
+plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", xlab="Tiempo, t", ylab="Valores de entropía")
+```
 
 # Entropía utilizando ventanas deslizantes
 
