--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Teoría de la Información"
 author: "Vanessa Martínez Romero, Moisés Emiliano Arellano Ávila y Fernando Gómez Perera"
-date: "25/11/2020"
+date: "04/12/2020"
 output:
   pdf_document: default
   rmdformats::readthedown:
@@ -26,7 +26,7 @@ La entropía se puede interpretar como un indicativo de la complejidad en una se
 - $p_j \ge 0, \, j  \in 0,1, \ldots, N$
 - $\sum_{j=1}^N{p_j} = 1$
 
-`R` tiene múltiples paquetes y funcionalidades que permiten estimar la `pmf` de un conjunto de datos como el descrito anteriormente. El histograma es una herramienta que permite estimar la `pmf` de un conjunto de datos. En el ejemplo que sigue se muestra la forma de estimar la `pmf` en `R`:
+`R` tiene múltiples paquetes y Funciónalidades que permiten estimar la `pmf` de un conjunto de datos como el descrito anteriormente. El histograma es una herramienta que permite estimar la `pmf` de un conjunto de datos. En el ejemplo que sigue se muestra la forma de estimar la `pmf` en `R`:
 
 ```{r}
 set.seed(1234)                       # Para hacer el análisis reproducible
@@ -48,7 +48,9 @@ Usando el paquete `ASH`, la `pmf` se calcula de la siguiente forma.
 ```{r pmf_ash, message=FALSE}
 pacman::p_load(ash)
 
-# Se calcula el histograma desplazado promediado univariado (en inglés, univariate averaged shifted histogram o ASH) usando un kernel polinomial, que es el que usa por defecto el paquete.
+# Se calcula el histograma desplazado promediado univariado (en inglés,
+# univariate averaged shifted histogram o ASH) usando un kernel polinomial,
+# que es el que usa por defecto el paquete.
 invisible(capture.output(histogram_ash <- ash1(bin1(datos))))
 
 pmf <- histogram_ash$y / sum(histogram_ash$y)
@@ -60,7 +62,8 @@ Usando el paquete `KernSmooth`, la `pmf` se calcula de la siguiente forma.
 ```{r pmf_kernsmooth, message=FALSE}
 pacman::p_load(KernSmooth)
 
-# Estimación de densidad de kernel agrupada (Binned Kernel Density Estimate) sobre los datos
+# Estimación de densidad de kernel agrupada (Binned Kernel Density Estimate)
+# sobre los datos
 bkde_kernsmooth <- bkde(datos)
 
 pmf <- bkde_kernsmooth$y / sum(bkde_kernsmooth$y)
@@ -87,7 +90,7 @@ res_bkde <- c()
 
 set.seed(1234)
 
-# Obtener el tiempo de ejecucion usando cada funcion con un valor de i
+# Obtener el tiempo de ejecución usando cada función con un valor de i
 for (i in 8:16) {
   N <- 2^i
   datos <- rnorm(N, mean = 1, sd = 1)
@@ -136,7 +139,8 @@ for(i in 1:noVentanas)
   entropies[i] <- -1*sum(pmf*log(pmf))
   index[i]     <- wLength*(i-1)+1
 }
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", 
+     xlab="Tiempo, t", ylab="Valores de entropía")
 ```
 
 ## Preguntas
@@ -173,7 +177,8 @@ for(i in 1:noVentanas)
   entropies[i] <- -1*sum(pmf*log(pmf), na.rm = TRUE)
   index[i]     <- wLength*(i-1)+1
 }
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", 
+     xlab="Tiempo, t", ylab="Valores de entropía")
 ```
 
 De igual forma, podría sumarse a todos los valores un número muy pequeño para que no se tengan probabilidades de 0, pero tampoco se modifiquen radicalmente las probabilidades obtenidas.
@@ -188,7 +193,7 @@ $$
 *R=*
 
 ```{r rt_entropy_3}
-# Funcion r_t
+# Función r_t
 r_t <- function(t, sigma) ifelse(t >= 16384, sigma / 4, 0)
 
 set.seed(1234)
@@ -207,7 +212,8 @@ for(i in 1:noVentanas)
   entropies[i] <- -1*sum(pmf*log(pmf))
   index[i]     <- wLength*(i-1)+1
 }
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", 
+     xlab="Tiempo, t", ylab="Valores de entropía")
 ```
 
 
@@ -221,7 +227,7 @@ $$
 *R=*
 
 ```{r rt_entropy_4}
-# Funcion r_t
+# Función r_t
 r_t <- function(t, sigma) ifelse(t >= 16384, sigma / 2, 0)
 
 set.seed(1234)
@@ -240,7 +246,8 @@ for(i in 1:noVentanas)
   entropies[i] <- -1*sum(pmf*log(pmf))
   index[i]     <- wLength*(i-1)+1
 }
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", 
+     xlab="Tiempo, t", ylab="Valores de entropía")
 ```
 
 5. Repitan el paso $3$ para $r_t$ dada por:
@@ -253,7 +260,7 @@ $$
 *R=*
 
 ```{r rt_entropy_5}
-# Funcion r_t
+# Función r_t
 r_t <- function(t, sigma) ifelse(t >= 16384, sigma, 0)
 
 set.seed(1234)
@@ -272,7 +279,8 @@ for(i in 1:noVentanas)
   entropies[i] <- -1*sum(pmf*log(pmf))
   index[i]     <- wLength*(i-1)+1
 }
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", 
+     xlab="Tiempo, t", ylab="Valores de entropía")
 ```
 
 6. ¿Tiene algún efecto la longitud del salto en $r_t$ en la forma de la entropía? Explique.
@@ -294,15 +302,10 @@ r_t = \begin{cases}
 $$
 ?
 
-
-
-\pagebreak
-
-
 *R=*
 
 ```{r rt_entropy_6}
-# Funcion r_t
+# Función r_t
 r_t <- function(t, sigma) ifelse(15872 <= t & t<= 16896, sigma, 0)
 
 set.seed(1234)
@@ -321,7 +324,8 @@ for(i in 1:noVentanas)
   entropies[i] <- -1*sum(pmf*log(pmf))
   index[i]     <- wLength*(i-1)+1
 }
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", 
+     xlab="Tiempo, t", ylab="Valores de entropía")
 ```
 
 Respecto al gráfico anterior, la entropía tiene casi la misma forma. De hecho, las variaciones son muy pequeñas. Donde sí varía en mayor medida es en la forma de la serie de datos, que en general es muy diferente a todas las series de datos anteriores.
@@ -333,6 +337,7 @@ Respecto al gráfico anterior, la entropía tiene casi la misma forma. De hecho,
 Primero definimos una función para la entropía de Havrda
 
 ```{r havrda_fun}
+# Función para la entropía de Havrda
 havrda <- function(pmf, alpha) sum(pmf^alpha - 1) / (2^(1 - alpha) - 1) 
 ```
 
@@ -340,7 +345,7 @@ havrda <- function(pmf, alpha) sum(pmf^alpha - 1) / (2^(1 - alpha) - 1)
 Repitiendo el paso 3, con ambos valores de alpha para la entropía de Havrda se obtiene lo siguiente:
 
 ```{r fun_3}
-# Funcion r_t
+# Función r_t
 r_t <- function(t, sigma) ifelse(t >= 16384, sigma / 4, 0)
 ```
 
@@ -361,11 +366,12 @@ for(i in 1:noVentanas)
   dataW        <- datos[(wLength*(i-1)+1):(wLength*i)]
   histo        <- hist(dataW, breaks=8,plot=FALSE)
   pmf          <- histo$counts/sum(histo$counts)
-  # Entropia de Havrda con alpha = 3
+  # Entropía de Havrda con alpha = 3
   entropies[i] <- havrda(pmf, alpha = 3)
   index[i]     <- wLength*(i-1)+1
 }
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", 
+     xlab="Tiempo, t", ylab="Valores de entropía")
 ```
 
 Usando $\alpha = 9$:
@@ -384,17 +390,18 @@ for(i in 1:noVentanas)
   dataW        <- datos[(wLength*(i-1)+1):(wLength*i)]
   histo        <- hist(dataW, breaks=8,plot=FALSE)
   pmf          <- histo$counts/sum(histo$counts)
-  # Entropia de Havrda con alpha = 9
+  # Entropía de Havrda con alpha = 9
   entropies[i] <- havrda(pmf, alpha = 9)
   index[i]     <- wLength*(i-1)+1
 }
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", 
+     xlab="Tiempo, t", ylab="Valores de entropía")
 ```
 
 Repitiendo el paso 4, con ambos valores de alpha para la entropía de Havrda se obtiene lo siguiente:
 
 ```{r fun_4}
-# Funcion r_t
+# Función r_t
 r_t <- function(t, sigma) ifelse(t >= 16384, sigma / 2, 0)
 ```
 
@@ -414,11 +421,12 @@ for(i in 1:noVentanas)
   dataW        <- datos[(wLength*(i-1)+1):(wLength*i)]
   histo        <- hist(dataW, breaks=8,plot=FALSE)
   pmf          <- histo$counts/sum(histo$counts)
-  # Entropia de Havrda con alpha = 3
+  # Entropía de Havrda con alpha = 3
   entropies[i] <- havrda(pmf, alpha = 3)
   index[i]     <- wLength*(i-1)+1
 }
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l", main="Entropías empíricas para datos normales",
+     xlab="Tiempo, t", ylab="Valores de entropía")
 ```
 
 Usando $\alpha = 9$:
@@ -437,17 +445,18 @@ for(i in 1:noVentanas)
   dataW        <- datos[(wLength*(i-1)+1):(wLength*i)]
   histo        <- hist(dataW, breaks=8,plot=FALSE)
   pmf          <- histo$counts/sum(histo$counts)
-  # Entropia de Havrda con alpha = 9
+  # Entropía de Havrda con alpha = 9
   entropies[i] <- havrda(pmf, alpha = 9)
   index[i]     <- wLength*(i-1)+1
 }
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", 
+     xlab="Tiempo, t", ylab="Valores de entropía")
 ```
 
 Repitiendo el paso 5, con ambos valores de alpha para la entropía de Havrda se obtiene lo siguiente:
 
 ```{r fun_5}
-# Funcion r_t
+# Función r_t
 r_t <- function(t, sigma) ifelse(t >= 16384, sigma, 0)
 ```
 
@@ -468,11 +477,12 @@ for(i in 1:noVentanas)
   dataW        <- datos[(wLength*(i-1)+1):(wLength*i)]
   histo        <- hist(dataW, breaks=8,plot=FALSE)
   pmf          <- histo$counts/sum(histo$counts)
-  # Entropia de Havrda con alpha = 3
+  # Entropía de Havrda con alpha = 3
   entropies[i] <- havrda(pmf, alpha = 3)
   index[i]     <- wLength*(i-1)+1
 }
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", 
+     xlab="Tiempo, t", ylab="Valores de entropía")
 ```
 
 Usando $\alpha = 9$:
@@ -491,11 +501,12 @@ for(i in 1:noVentanas)
   dataW        <- datos[(wLength*(i-1)+1):(wLength*i)]
   histo        <- hist(dataW, breaks=8,plot=FALSE)
   pmf          <- histo$counts/sum(histo$counts)
-  # Entropia de Havrda con alpha = 9
+  # Entropía de Havrda con alpha = 9
   entropies[i] <- havrda(pmf, alpha = 9)
   index[i]     <- wLength*(i-1)+1
 }
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", 
+     xlab="Tiempo, t", ylab="Valores de entropía")
 ```
 
 Repitiendo el paso 6, el salto de longitud que tiene $r_t$ provoca que la entropía varíe un poco en sus picos, haciendo que aparezcan más picos conforme aumenta el valor de $sigma$ o que se modifique su altura.
@@ -505,7 +516,7 @@ Repitiendo el paso 7, con ambos valores de alpha para la entropía de Havrda se 
 Usando $\alpha = 3$:
 
 ```{r fun_7}
-# Funcion r_t
+# Función r_t
 r_t <- function(t, sigma) ifelse(15872 <= t & t<= 16896, sigma, 0)
 ```
 
@@ -524,11 +535,12 @@ for(i in 1:noVentanas)
   dataW        <- datos[(wLength*(i-1)+1):(wLength*i)]
   histo        <- hist(dataW, breaks=8,plot=FALSE)
   pmf          <- histo$counts/sum(histo$counts)
-  # Entropia de Havrda con alpha = 3
+  # Entropía de Havrda con alpha = 3
   entropies[i] <- havrda(pmf, alpha = 3)
   index[i]     <- wLength*(i-1)+1
 }
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", 
+     xlab="Tiempo, t", ylab="Valores de entropía")
 ```
 
 Usando $\alpha = 9$:
@@ -547,11 +559,12 @@ for(i in 1:noVentanas)
   dataW        <- datos[(wLength*(i-1)+1):(wLength*i)]
   histo        <- hist(dataW, breaks=8,plot=FALSE)
   pmf          <- histo$counts/sum(histo$counts)
-  # Entropia de Havrda con alpha = 9
+  # Entropía de Havrda con alpha = 9
   entropies[i] <- havrda(pmf, alpha = 9)
   index[i]     <- wLength*(i-1)+1
 }
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l", main="Entropías empíricas para datos normales", 
+     xlab="Tiempo, t", ylab="Valores de entropía")
 ```
 
 El efecto que tiene el parámetro $\alpha$ en la entropía de Havrda es aumentar los valores de la entropía como se observa en las gráficas anteriores, ya que, a mayor valor de $\alpha$, mayores serán los valores en la entropía. Sin embargo, el patrón de la entropía es el mismo en cada caso, solamente variando la altura de acuerdo a su valor de $\alpha$, como ya se explicó.
@@ -563,20 +576,6 @@ $$
 X(m; W, \Delta) = x_j \times \Pi(\frac{t-m\Delta}{W}-\frac{1}{2}),
 $$
 donde $m\Delta \le j \le m\Delta + W$ y $m=0,1,2, \ldots$. Finalmente se puede graficar $nW + \Delta, n=1,2,3, \ldots$ contra las entropías y verificar algún patrón en los datos.
-
-
-
-
-
-
-
-\pagebreak
-
-
-
-
-
-
 
 ## Ejercicios
 
@@ -597,36 +596,39 @@ pacman::p_load(zeallot)
 Primero se define la función de Havrda normalizada
 
 ```{r fun_havrda_normal}
-# Definicion de la funcion de Havrda normalizada
-havrda_normalizada <- function(pmf, N, a.parameter) sum(pmf^a.parameter - 1) / (N^(1 - a.parameter) - 1)
+# Definición de la función de Havrda normalizada
+havrda_normalizada <- function(pmf, N, a.parameter) {
+  sum(pmf^a.parameter - 1) / (N^(1 - a.parameter) - 1)
+}
 ```
 
 Después, esta función se usa para implementar la metodología del cálculo de la entropía por ventanas deslizantes.
 
 ```{r fun_havrda_deslizante}
-# Definicion del calculo de la entropia de Havrda por ventanas deslizantes
-havrda_deslizante <- function(datos, w.length = 512, s.factor = 10, a.parameter = 0.8, ent.type = c("hist", "ash", "kern")) {
-  # Se almacena el numero de observaciones
+# Definición del cálculo de la entropía de Havrda por ventanas deslizantes
+havrda_deslizante <- function(datos, w.length = 512, s.factor = 10,
+                              a.parameter = 0.8, ent.type = c("hist", "ash", "kern")) {
+  # Se almacena el número de observaciones
   N <- length(datos)
-  # Se inicializa la secuencia para la creacion de ventanas deslizantes
+  # Se inicializa la secuencia para la creación de ventanas deslizantes
   m <- 0
   # Se inicializa la secuencia n
   n <- 1
-  # Se inicializan los limites del rango de datos
+  # Se inicializan los límites del rango de datos
   inf <- 0
   sup <- 0
-  # Se inicializa el vector de entropias
+  # Se inicializa el vector de entropías
   entropies <- c()
-  # Se inicializa el vector de indices
+  # Se inicializa el vector de índices
   index <- c()
-  # Se inicializan los limites del rango
+  # Se inicializan los límites del rango
   inf <- m * s.factor + 1
   sup <- m * s.factor + w.length
   # Se crean las ventanas deslizantes mientras existan datos
   while (sup <= N) {
     # Se obtienen los datos dentro de la ventana deslizantes
     dataW <- datos[inf:sup]
-    # Se calcula la pmf usando el metodo adecuado
+    # Se calcula la pmf usando el método adecuado
     pmf <- switch (ent.type,
       "hist" = {
         hist <- hist(dataW, breaks = 1000, plot = FALSE)
@@ -643,16 +645,16 @@ havrda_deslizante <- function(datos, w.length = 512, s.factor = 10, a.parameter 
     )
     # Se calcula la entropía de Havrda normalizada
     entropies <- append(entropies, havrda_normalizada(pmf, N, a.parameter))
-    # Se agrega el indice
+    # Se agrega el índice
     index <- append(index, n*w.length + s.factor)
     # Se actualiza el valor de m y n
     m <- m + 1
     n <- n + 1
-    # Se actualizan los limites del rango
+    # Se actualizan los límites del rango
     inf <- m * s.factor + 1
     sup <- m * s.factor + w.length
   }
-  # Se regresa el vector X y el de entropias
+  # Se regresa el vector de índices y el de entropías
   return(list(index, entropies))
 }
 ```
@@ -662,7 +664,7 @@ Con esta formula se repiten los pasos 3, 4, 5 y 7.
 * Repitiendo el paso 3:
 
 ```{r sliding_3_fun}
-# Funcion r_t
+# Función r_t
 r_t <- function(t, sigma) ifelse(t >= 16384, sigma / 4, 0)
 ```
 
@@ -673,21 +675,27 @@ plot(datos, type = "l", main="Serie de datos normal", ylab="Valores", xlab="Tiem
 
 # Usando hist
 c(index, entropies) %<-% havrda_deslizante(datos, ent.type = "hist")
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales (usando hist)", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l",
+     main="Entropías empíricas para datos normales (usando hist)", xlab="Tiempo, t",
+     ylab="Valores de entropía")
 
 # Usando ash
 c(index, entropies) %<-% havrda_deslizante(datos, ent.type = "ash")
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales (usando ash)", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l",
+     main="Entropías empíricas para datos normales (usando ash)", xlab="Tiempo, t",
+     ylab="Valores de entropía")
 
 # Usando kern
 c(index, entropies) %<-% havrda_deslizante(datos, ent.type = "kern")
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales (usando kern)", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l",
+     main="Entropías empíricas para datos normales (usando kern)", xlab="Tiempo, t",
+     ylab="Valores de entropía")
 ```
 
 * Repitiendo el paso 4:
 
 ```{r sliding_4_fun}
-# Funcion r_t
+# Función r_t
 r_t <- function(t, sigma) ifelse(t >= 16384, sigma / 2, 0)
 ```
 
@@ -698,21 +706,27 @@ plot(datos, type = "l", main="Serie de datos normal", ylab="Valores", xlab="Tiem
 
 # Usando hist
 c(index, entropies) %<-% havrda_deslizante(datos, ent.type = "hist")
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales (usando hist)", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l",
+     main="Entropías empíricas para datos normales (usando hist)", xlab="Tiempo, t",
+     ylab="Valores de entropía")
 
 # Usando ash
 c(index, entropies) %<-% havrda_deslizante(datos, ent.type = "ash")
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales (usando ash)", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l",
+     main="Entropías empíricas para datos normales (usando ash)", xlab="Tiempo, t",
+     ylab="Valores de entropía")
 
 # Usando kern
 c(index, entropies) %<-% havrda_deslizante(datos, ent.type = "kern")
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales (usando kern)", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l",
+     main="Entropías empíricas para datos normales (usando kern)", xlab="Tiempo, t",
+     ylab="Valores de entropía")
 ```
 
 * Repitiendo el paso 5:
 
 ```{r sliding_5_fun}
-# Funcion r_t
+# Función r_t
 r_t <- function(t, sigma) ifelse(t >= 16384, sigma, 0)
 ```
 
@@ -723,21 +737,27 @@ plot(datos, type = "l", main="Serie de datos normal", ylab="Valores", xlab="Tiem
 
 # Usando hist
 c(index, entropies) %<-% havrda_deslizante(datos, ent.type = "hist")
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales (usando hist)", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l",
+     main="Entropías empíricas para datos normales (usando hist)", xlab="Tiempo, t",
+     ylab="Valores de entropía")
 
 # Usando ash
 c(index, entropies) %<-% havrda_deslizante(datos, ent.type = "ash")
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales (usando ash)", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l",
+     main="Entropías empíricas para datos normales (usando ash)", xlab="Tiempo, t",
+     ylab="Valores de entropía")
 
 # Usando kern
 c(index, entropies) %<-% havrda_deslizante(datos, ent.type = "kern")
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales (usando kern)", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l",
+     main="Entropías empíricas para datos normales (usando kern)", xlab="Tiempo, t",
+     ylab="Valores de entropía")
 ```
 
 * Repitiendo el paso 7:
 
 ```{r sliding_7_fun}
-# Funcion r_t
+# Función r_t
 r_t <- function(t, sigma) ifelse(15872 <= t & t<= 16896, sigma, 0)
 ```
 
@@ -748,15 +768,21 @@ plot(datos, type = "l", main="Serie de datos normal", ylab="Valores", xlab="Tiem
 
 # Usando hist
 c(index, entropies) %<-% havrda_deslizante(datos, ent.type = "hist")
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales (usando hist)", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l",
+     main="Entropías empíricas para datos normales (usando hist)", xlab="Tiempo, t",
+     ylab="Valores de entropía")
 
 # Usando ash
 c(index, entropies) %<-% havrda_deslizante(datos, ent.type = "ash")
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales (usando ash)", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l",
+     main="Entropías empíricas para datos normales (usando ash)", xlab="Tiempo, t",
+     ylab="Valores de entropía")
 
 # Usando kern
 c(index, entropies) %<-% havrda_deslizante(datos, ent.type = "kern")
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales (usando kern)", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l",
+     main="Entropías empíricas para datos normales (usando kern)", xlab="Tiempo, t",
+     ylab="Valores de entropía")
 ```
 
 * Para entender el efecto de $\alpha$ sobre la forma de la entropía, se repetirá el caso 7 con distintos valores de $\alpha$ y usando `kern`.
@@ -765,28 +791,36 @@ Con $\alpha = 1.1$
 
 ```{r 7_alpha_1.1}
 c(index, entropies) %<-% havrda_deslizante(datos, a.parameter = 1.1, ent.type = "kern")
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales (usando kern)", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l",
+     main="Entropías empíricas para datos normales (usando kern)", xlab="Tiempo, t",
+     ylab="Valores de entropía")
 ```
 
 Con $\alpha = 2$:
 
 ```{r 7_alpha_2}
 c(index, entropies) %<-% havrda_deslizante(datos, a.parameter = 2, ent.type = "kern")
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales (usando kern)", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l",
+     main="Entropías empíricas para datos normales (usando kern)", xlab="Tiempo, t",
+     ylab="Valores de entropía")
 ```
 
 Con $\alpha = 4$:
 
 ```{r 7_alpha_4}
 c(index, entropies) %<-% havrda_deslizante(datos, a.parameter = 4, ent.type = "kern")
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales (usando kern)", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l",
+     main="Entropías empíricas para datos normales (usando kern)", xlab="Tiempo, t",
+     ylab="Valores de entropía")
 ```
 
 Con $\alpha = 7$
 
 ```{r 7_alpha_7}
 c(index, entropies) %<-% havrda_deslizante(datos, a.parameter = 7, ent.type = "kern")
-plot(index, entropies, type = "l", main="Entropías empíricas para datos normales (usando kern)", xlab="Tiempo, t", ylab="Valores de entropía")
+plot(index, entropies, type = "l",
+     main="Entropías empíricas para datos normales (usando kern)", xlab="Tiempo, t",
+     ylab="Valores de entropía")
 ```
 
 Aunque la forma de la entropía sigue siendo la misma, lo que hace $\alpha$ es trasladar la función sobre el eje de la $Y$, así como disminuir el tamaño de la misma, haciéndola cada vez más pequeña hasta llegar a un punto donde la entropía se vuelve una línea horizontal.
@@ -801,6 +835,6 @@ $$
 
 Donde $p_i'$ representa las frecuencias relativas de los posibles patrones de secuencias de símbolos, denominadas permutaciones. Las permutación se relaciona a la secuencia de $m$ (dimensión embebida) valores de la serie original.
 
-# Referencias:
+# Referencias
 
 Baldini, G. (2020). **On the Application of Entropy Measures with Sliding Window for Intrusion Detection in Automotive In-Vehicle Networks**. Entropy 2020, 22, 1044.
